# tm-sync-edit

./: Cargo.toml  Install-ObjectInfoExtractor.ps1  Install-OpenplanetClient.ps1  README.md  RoadTechInBeam.Block.Gbx  Test.Map.Gbx
.github/workflows/: rust.yml
client/: Cargo.toml  Install.ps1
client/ffi/: Cargo.toml
client/lib/: Cargo.toml
client/lib/src/: lib.rs
client/openplanet/: Install.ps1
client/openplanet/lib/: Cargo.toml
client/openplanet/lib/src/: executable_buf.rs  game.rs  hook.rs  lib.rs  os.rs  poll.rs  process.rs
client/openplanet/lib/src/game/: classes.rs  fns.rs  hook.rs  mod.rs
client/openplanet/lib/src/game/engines/: game.rs  game_data.rs  mw_foundations.rs  system.rs
client/openplanet/lib/src/os/: executable_memory.rs  executable_page.rs  mod.rs  process.rs  process_memory.rs
client/openplanet/lib/src/windows/: mod.rs
client/openplanet/src/: Library.as  Main.as
client/src/: Main.as
clients/openplanet/: README.md  info.toml
clients/openplanet/lib/: Cargo.toml
clients/openplanet/lib/src/: lib.rs
clients/openplanet/src/: Main.as  Settings.as
message/: Cargo.toml
message/src/: lib.rs
models/: .gitignore  Sync.cfg  Sync.tla  blocks.tla
server/: Cargo.toml
server/benches/: bench.rs
server/src/: BlockInfos.json  lib.rs  main.rs  map.rs  serde.rs
server/src/map/: ItemModelIds.json  mod.rs  tests.rs
shared/: Cargo.toml
shared/src/: lib.rs
tools/model-checker/: Blocks.tla  FreeObjects.tla  GhostBlocks.cfg  GhostBlocks.tla  SyncEdit.cfg  SyncEdit.tla
tools/model-checking/: Blocks.cfg  Blocks.tla  FreeObjects.cfg  FreeObjects.tla  README.md
tools/object-info-extractor/: README.md  info.toml
tools/object-info-extractor/src/: Main.as
tools/verifier/: SyncEdit.cfg  SyncEdit.tla
