[package]
name = "tm-sync-edit-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
futures-util = { version = "0.3.30", features = ["sink"] }
gamebox = { git = "https://github.com/jussyDr/gamebox" }
log = "0.4.21"
tm-sync-edit-shared = { path = "../shared" }
tokio = { version = "1.35.1", features = ["macros", "net", "rt-multi-thread"] }
