[package]
name = "tm-sync-edit-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tm-sync-edit-shared = { path = "../shared" }

bytes = "1.5.0"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.3"
futures-util = { version = "0.3.30", features = ["sink"] }
log = "0.4.21"
tokio = { version = "1.36.0", features = ["net", "rt-multi-thread"] }
