[package]
name = "tm-sync-edit-server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
futures-util = { version = "0.3.30", features = ["sink"] }
gamebox = { git = "https://github.com/jussyDr/gamebox" }
log = "0.4.21"
ordered-float = "4.2.0"
tokio = { version = "1.37.0", features = ["macros", "net", "rt-multi-thread"] }
