[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcode = { version = "0.6.0", features = ["serde"] }
blake3 = { version = "1.5.1", features = ["serde"] }
ordered-float = { version = "4.2.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["net"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
