[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcode = { version = "0.6.0", features = ["serde"] }
blake3 = { version = "1.5.1", features = ["serde"] }
gamebox = { git = "https://github.com/jussyDr/gamebox", features = ["serde"] }
ordered-float = { version = "4.2.0", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["net"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
