[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { version = "1.5.1", features = ["serde"] }
gamebox = { git = "https://github.com/jussyDr/gamebox", features = ["serde"] }
ordered-float = { version = "4.2.0", features = ["serde"] }
postcard = { version = "1.0.8", features = ["use-std"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["net"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
