[package]
name = "tm-sync-edit-client-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../../../shared" }

ahash = "0.8.11"
async-compat = "0.2.3"
autopad = "1.0.0"
blake3 = "1.5.1"
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink"] }
gamebox = { git = "https://github.com/jussyDr/gamebox" }
memchr = "2.7.2"
native-dialog = "0.7.0"
ordered-float = "4.2.0"
tokio = { version = "1.37.0", features = ["macros", "net"] }

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
]
