[package]
name = "tm-sync-edit-client-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
autopad = "1.0.0"
native-dialog = "0.7.0"
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
