[package]
name = "tm-sync-edit-client-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../../../shared" }

async-compat = "0.2.4"
autopad = "1.0.0"
futures = "0.3.30"
native-dialog = "0.7.0"
tokio = { version = "1.38.0", features = ["net"] }
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
